# level_up

./: .firebaserc  .gitignore  CHANGELOG.md  README.md  firebase.json  firestore.rules  flutter_native_splash.yaml  local.properties  pubspec.yaml  pyproject.toml
.github/workflows/: db-backup.yml  deploy.yml
android/: .gitignore  build.gradle.kts  gradle.properties  key.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
assets/mermaid_files/: authentication.md  calorie_calculator.md  food_logging.md  home_screen.md
backend/: __init__.py  auth.py  backfill_created_at.py  gunicorn.conf.py  redis_cache.py  repository.py  requirements.txt  schemas.py  server.py  services.py  token_manager.py  utils.py  valid_achievements.py
backend/repositories/: achievement_repository.py  friendship_repository.py  premium_perks_repository.py  rate_limit_repository.py  reminder_repository.py  user_repository.py  workout_repository.py
backend/services/: __init__.py  food_service.py  friendship_service.py  poi_service.py  progression_service.py  snapshot_service.py  workout_service.py
backend/tests/: __init__.py  test_admob_ssv.py  test_food_service.py  test_poi_service.py  test_snapshot_service.py  (+3 more)
dataconnect/: dataconnect.yaml
ios/: .gitignore
lib/: globals.dart  guest.dart  home_screen.dart  main.dart  router.dart
linux/: CMakeLists.txt
scripts/: backup_db.py
sql/: featured_routines.sql  functions.sql  migrate_food_logs.sql  schema.sql
web/: 404.html  firebase-messaging-sw.js  index.html  manifest.json
windows/: .gitignore
(+152 files in other folders)
